Added auth ui.
