# design/design.go
@@ -13,7 +13,28 @@ var OAuth2Sec = OAuth2("/oauth2/authorize", "/oauth2/token", func() {
 
 var _ = Resource("public", func() {
 	Origin("*", func() {
-		Methods("GET")
+		Methods("GET", "POST")
 	})
 	Files("/login", "public/login/login-form.html")
+
+})
+
+var _ = Resource("authUI", func() {
+	BasePath("/auth")
+	Action("promptAuthorization", func() {
+		Description("Prompt the user for client authorization")
+		Routing(GET("/authorize-client"))
+		Response(InternalServerError, ErrorMedia)
+		Response(BadRequest, ErrorMedia)
+
+	})
+	Action("confirmAuthorization", func() {
+		Description("Confirm the authorization of the client")
+		Routing(POST("/confirm-authorization"))
+		Params(func() {
+			Param("confirmed", Boolean, "Is the authorization confirmed.")
+		})
+		Response(InternalServerError, ErrorMedia)
+		Response(BadRequest, ErrorMedia)
+	})
 })
